2005-04-11  Kevin Kofler  <Kevin@tigcc.ticalc.org>

      * interp.c: Don't include syscall.h.

2005-04-01  Kevin Kofler  <Kevin@tigcc.ticalc.org>

      * interp.c (m68k_go_sim): Handle step_over_calls directly.
        (m68k_sim_supervisor_mode_p): New function.

2005-04-01  Kevin Kofler  <Kevin@tigcc.ticalc.org>

      * interp.c (sim_write): Call fill_prefetch_0 and gdbcallback_refresh_debugger after writing.

2005-03-30  Kevin Kofler  <Kevin@tigcc.ticalc.org>

      * interp.c (sim_resume): Call gdbcallback_disable_debugger and gdbcallback_enable_debugger.
        (sim_fetch_register): Use m68k_getpc for %pc.
        (sim_store_register): Use m68k_setpc for %pc.
        (sim_create_inferior, sim_resume): Delete regs.pc kludge.

2005-03-30  Kevin Kofler  <Kevin@tigcc.ticalc.org>

      * interp.c (saved_state): Delete variable.
        (MMASKB, RAISE_EXCEPTION, sim_create_inferior, init_pointers, sim_stop_reason, sim_resume, sim_fetch_register,
         sim_store_register): Use regs instead of saved_state.
        (sim_create_inferior, sim_resume): Don't copy regs to saved_state.
        (sim_resume): Don't copy saved_state to regs.
        (sim_exception): Delete pc argument and special-casing of trap #15.

2005-03-30  Kevin Kofler  <Kevin@tigcc.ticalc.org>

      * interp.c (sim_exception): Delete oldpc argument.

2005-03-30  Kevin Kofler  <Kevin@tigcc.ticalc.org>

      * interp.c (m68k_go_sim): Raise SIGQUIT, not SIGINT. Raise it to regs, not saved_state.

2005-03-30  Kevin Kofler  <Kevin@tigcc.ticalc.org>

      * interp.c (call_calltrap, customreset, sim_os_trap, write_log_standard, uae_reset, uae_quit, S_ERR, put,
          put_arg, get_arg): Delete.
        (currprefs): Delete variable.
        (parse_and_set_memory_size): Delete.
        (sim_open): Don't call it.
        (sim_open, sim_set_cpu_variant, sim_info): Delete #if 0'ed currprefs-using code.
        (m68k_go_sim): Call engine_start and gtk_main for the non-single-step case.