@@ -1,3 +1,7 @@
+2005-04-12  Kevin Kofler  <Kevin@tigcc.ticalc.org>
+
+        * doublest.c (isinfl): Define to isinf under MinGW if not defined.
+
 2005-04-11  Kevin Kofler  <Kevin@tigcc.ticalc.org>
 
         * remote-fileio.c: Include winsock.h under MinGW to get struct timeval declaration.
